--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
 <head>
     <title>Hello World, Spring 2015</title>
     <meta charset="utf-8">
-    <meta>
+    <meta name="viewport" 
+        content="width=device-width,
+        minimum-scale=1,
+        maximum-scale=1,
+        user-scalable=no"
+    >
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/styles.css">
     <script src="js/OSC.js"></script>
